--- a/package.json
+++ b/package.json
@@ -11,33 +11,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
-    "@angular/cdk": "^7.1.0",
-    "@angular/common": "~7.1.0",
-    "@angular/compiler": "~7.1.0",
-    "@angular/core": "~7.1.0",
+    "@angular/animations": "^7.2.16",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
+    "@angular/core": "^7.2.16",
     "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "~7.1.0",
-    "@angular/material": "^7.1.0",
-    "@angular/platform-browser": "~7.1.0",
-    "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/router": "~7.1.0",
-    "angular-google-charts": "^0.1.6",
+    "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.2.0",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "~7.2.0",
+    "angular-plotly.js": "^1.3.2",
     "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "eslint": ">=4.18.2",
-    "ng2-charts": "^2.2.5",
+    "ng2-charts": "^2.2.3",
+    "plotly.js": "^1.52.2",
     "rxjs": "~6.3.3",
     "serialize-javascript": ">=2.1.1",
     "tslib": "^1.9.0",
     "webpack-dev-server": ">=3.1.11",
-    "zone.js": "~0.8.26"    
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "~7.1.3",
-    "@angular/compiler-cli": "~7.1.0",
-    "@angular/language-service": "~7.1.0",
+    "@angular-devkit/build-angular": "^0.10.0",
+    "@angular/cli": "~7.2.3",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
