--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "angular-plotly.js": "^1.3.2",
+    "angular2-multiselect-dropdown": "^4.6.3",
     "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "eslint": ">=4.18.2",
