--- a/package.json
+++ b/package.json
@@ -11,50 +11,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.16",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "^7.2.16",
-    "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "~7.2.0",
-    "@angular/material": "^7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "angular-plotly.js": "^1.3.2",
+    "@angular/animations": "^9.0.6",
+    "@angular/cdk": "^9.1.2",
+    "@angular/common": "^9.0.6",
+    "@angular/compiler": "^9.0.6",
+    "@angular/core": "^9.0.6",
+    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/forms": "^9.0.6",
+    "@angular/material": "^9.1.2",
+    "@angular/platform-browser": "^9.0.6",
+    "@angular/platform-browser-dynamic": "^9.0.6",
+    "@angular/router": "^9.0.6",
+    "angular-plotly.js": "^2.0.0",
     "angular2-multiselect-dropdown": "^4.6.3",
     "chart.js": "^2.9.3",
-    "core-js": "^2.5.4",
+    "core-js": "^3.6.4",
     "eslint": ">=4.18.2",
     "ng2-charts": "^2.2.3",
-    "plotly.js": "^1.52.2",
-    "rxjs": "~6.3.3",
+    "plotly.js": "^1.52.3",
+    "rxjs": "~6.5.4",
     "serialize-javascript": ">=2.1.1",
-    "tslib": "^1.9.0",
+    "tslib": "^1.11.1",
     "webpack-dev-server": ">=3.1.11",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.0",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "^0.900.6",
+    "@angular/cli": "^9.0.6",
+    "@angular/compiler-cli": "^9.0.6",
+    "@angular/language-service": "^9.0.6",
+    "@types/jasmine": "3.5.9",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
+    "@types/node": "~13.9.1",
+    "codelyzer": "^5.2.1",
     "goodparts": "^1.2.1",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "ts-node": "~8.6.2",
+    "tslint": "~6.1.0",
+    "typescript": "^3.7.3"
   }
 }
