--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "angular-highcharts": "^9.0.2",
     "angular-plotly.js": "^2.0.0",
     "angular2-multiselect-dropdown": "^4.6.3",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "eslint": ">=4.18.2",
-    "ng2-charts": "^2.2.3",
+    "highcharts": "^8.0.4",
+    "ng2-charts": "^2.3.0",
     "plotly.js": "^1.52.3",
     "rxjs": "~6.5.4",
     "serialize-javascript": ">=2.1.1",
