--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "corona-simulator",
-  "version": "0.0.0",
+  "name": "VirusSimulator",
+  "description": "An angular-based online simulation tool for the spread of infectious diseases. Based on the SIR-network method.",
+  "repository": {
+    "url": "https://github.com/SilverLinings89/VirusSimulator",
+    "type": "git"
+  },
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,13 +17,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.0.6",
-    "@angular/cdk": "^9.1.2",
+    "@angular/cdk": "^9.1.3",
     "@angular/common": "^9.0.6",
     "@angular/compiler": "^9.0.6",
     "@angular/core": "^9.0.6",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "^9.0.6",
-    "@angular/material": "^9.1.2",
+    "@angular/material": "^9.1.3",
     "@angular/platform-browser": "^9.0.6",
     "@angular/platform-browser-dynamic": "^9.0.6",
     "@angular/router": "^9.0.6",
@@ -35,8 +40,10 @@
     "rxjs": "~6.5.4",
     "serialize-javascript": ">=2.1.1",
     "tslib": "^1.11.1",
+    "tslint": "^6.1.0",
+    "typescript": "^3.7.3",
     "webpack-dev-server": ">=3.1.11",
-    "zone.js": "~0.10.2"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.900.6",
@@ -47,6 +54,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~13.9.1",
     "codelyzer": "^5.2.1",
+    "fibers": "^3.1.0",
     "goodparts": "^1.2.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -55,9 +63,8 @@
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.2",
+    "node-sass": "^4.0.0",
     "protractor": "~5.4.0",
-    "ts-node": "~8.6.2",
-    "tslint": "~6.1.0",
-    "typescript": "^3.7.3"
+    "ts-node": "~8.6.2"
   }
 }
