--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
             sudo apt-get install ncftp;
       - run:
           name: Send Via SFTP
-          command: ncftp -R -v -u "${username}" ${host} VirusSimulator/ dist/VirusSimulator/*
+          command: ncftp -R -v -u ${username} -p ${password} ${host} VirusSimulator/ dist/VirusSimulator/*
 workflows:
   build-and-test:
     jobs:
