--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: node_modules/angular-cli/bin/ng build --prod --buildOptimizer --output-hashing=none
+            - run: node_modules\@angular\cli\bin\ng build --prod --buildOptimizer --output-hashing=none
       - run:
           name: Install LFTP
           command: |
