--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.14",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
+    "@angular/animations": "^12.2.16",
+    "@angular/cdk": "^11.2.13",
+    "@angular/common": "^12.2.16",
+    "@angular/compiler": "^12.2.16",
+    "@angular/core": "^12.2.16",
     "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "^11.2.14",
-    "@angular/material": "^9.1.3",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
+    "@angular/forms": "^12.2.16",
+    "@angular/material": "^10.2.7",
+    "@angular/platform-browser": "^12.2.16",
+    "@angular/platform-browser-dynamic": "^12.2.16",
+    "@angular/router": "^12.2.16",
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
@@ -39,31 +39,31 @@
     "plotly.js": "^1.52.3",
     "rxjs": "~6.5.4",
     "serialize-javascript": ">=2.1.1",
-    "tslib": "^1.11.1",
-    "tslint": "^6.1.0",
+    "tslib": "^2.0.0",
+    "tslint": "~6.1.0",
     "typescript": "~4.1.6",
     "webpack-dev-server": ">=3.1.11",
-    "zone.js": "^0.10.3"
+    "zone.js": "^0.11.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.5",
-    "@angular/cli": "^9.0.6",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/language-service": "^11.2.14",
+    "@angular/cli": "^10.2.4",
+    "@angular/compiler-cli": "^12.2.16",
+    "@angular/language-service": "^12.2.16",
     "@types/jasmine": "3.5.9",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~13.9.1",
     "codelyzer": "^5.2.1",
     "goodparts": "^1.2.1",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^6.3.19",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "~3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "node-sass": "^7.0.0",
-    "protractor": "~5.4.0",
+    "protractor": "~7.0.0",
     "ts-node": "~8.6.2"
   }
 }
