--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.16",
-    "@angular/cdk": "^11.2.13",
-    "@angular/common": "^12.2.16",
-    "@angular/compiler": "^12.2.16",
-    "@angular/core": "^12.2.16",
+    "@angular/animations": "^13.3.6",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "^13.3.6",
+    "@angular/compiler": "^13.3.6",
+    "@angular/core": "^13.3.6",
     "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "^12.2.16",
-    "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "^12.2.16",
-    "@angular/platform-browser-dynamic": "^12.2.16",
-    "@angular/router": "^12.2.16",
+    "@angular/forms": "^13.3.6",
+    "@angular/material": "^11.2.13",
+    "@angular/platform-browser": "^13.3.6",
+    "@angular/platform-browser-dynamic": "^13.3.6",
+    "@angular/router": "^13.3.6",
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
@@ -41,23 +41,23 @@
     "serialize-javascript": ">=2.1.1",
     "tslib": "^2.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.6",
+    "typescript": "~4.6.4",
     "webpack-dev-server": ">=3.1.11",
     "zone.js": "^0.11.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.5",
-    "@angular/cli": "^10.2.4",
-    "@angular/compiler-cli": "^12.2.16",
-    "@angular/language-service": "^12.2.16",
-    "@types/jasmine": "3.5.9",
+    "@angular/cli": "^11.2.19",
+    "@angular/compiler-cli": "^13.3.6",
+    "@angular/language-service": "^13.3.6",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~13.9.1",
-    "codelyzer": "^5.2.1",
+    "codelyzer": "^6.0.0",
     "goodparts": "^1.2.1",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.19",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
