--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^13.3.6",
-    "@angular/cdk": "^12.2.13",
+    "@angular/cdk": "^13.3.6",
     "@angular/common": "^13.3.6",
     "@angular/compiler": "^13.3.6",
     "@angular/core": "^13.3.6",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "^13.3.6",
-    "@angular/material": "^11.2.13",
+    "@angular/material": "^12.2.13",
     "@angular/platform-browser": "^13.3.6",
     "@angular/platform-browser-dynamic": "^13.3.6",
     "@angular/router": "^13.3.6",
@@ -43,11 +43,11 @@
     "tslint": "~6.1.0",
     "typescript": "~4.6.4",
     "webpack-dev-server": ">=3.1.11",
-    "zone.js": "^0.11.5"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.5",
-    "@angular/cli": "^11.2.19",
+    "@angular/cli": "^12.2.17",
     "@angular/compiler-cli": "^13.3.6",
     "@angular/language-service": "^13.3.6",
     "@types/jasmine": "~3.6.0",
