Updating CircleCi config to use docker image.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,8 @@
 version: 2.1
-orbs:
-  node: circleci/node@4.7.0
 jobs:
   build:
-    executor:
-      name: node/default
+    docker:
+      - image: cimg/node:17.2.0
     steps:
       - checkout
       - node/install-packages:
