--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
     "url": "https://github.com/SilverLinings89/VirusSimulator",
     "type": "git"
   },
-  "version": "1.0.0",
+  "packageManager": "pnpm",
+  "version": "1.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
-    "lint": "node_modules/.bin/goodparts src/app",
-    "e2e": "ng e2e"
+    "test": "jest",
+    "e2e": "ng e2e",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -21,26 +22,24 @@
     "@angular/common": "^19.0.4",
     "@angular/compiler": "^19.0.4",
     "@angular/core": "^19.0.4",
-    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "^19.0.4",
     "@angular/material": "^19.0.3",
     "@angular/platform-browser": "^19.0.4",
     "@angular/platform-browser-dynamic": "^19.0.4",
     "@angular/router": "^19.0.4",
-    "@fortawesome/angular-fontawesome": "^0.10.2",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "angular-highcharts": "^13.0.1",
-    "angular-plotly.js": "^4.0.4",
-    "angular2-multiselect-dropdown": "^5.0.4",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "angular-highcharts": "^17.0.1",
+    "angular-plotly.js": "^6.0.0",
     "core-js": "^3.22.4",
     "eslint": ">=4.18.2",
-    "highcharts": "^10.1.0",
+    "highcharts": "^12.0.0",
     "plotly.js": "^2.12.1",
-    "rxjs": "~7.5.5",
+    "rxjs": "~7.8.1",
+    "sass": "^1.83.0",
     "serialize-javascript": ">=6.0.0",
     "tslib": "^2.4.0",
-    "tslint": "~6.1.3",
     "typescript": "~5.6.3",
     "webpack-dev-server": ">=3.1.11",
     "zone.js": "~0.15.0"
@@ -50,20 +49,14 @@
     "@angular/cli": "^19.0.5",
     "@angular/compiler-cli": "^19.0.4",
     "@angular/language-service": "^19.0.4",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~13.9.1",
-    "codelyzer": "^6.0.0",
-    "goodparts": "^1.2.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.19",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "node-sass": "^7.0.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.6.2"
+    "@types/jest": "^29.5.14",
+    "@types/node": "~22.10.2",
+    "angular-eslint": "19.0.2",
+    "eslint": "^9.16.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.4.2",
+    "ts-jest": "^29.2.5",
+    "ts-node": "~8.6.2",
+    "typescript-eslint": "8.18.0"
   }
 }
