Update Copyright and circleci config.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,16 @@
 version: 2.1
 orbs:
-  node: circleci/node@4.7.0
+  node: circleci/node@7.0.0
 jobs:
   build:
     docker:
-      - image: cimg/node:17.2.0
+      - image: cimg/base:stable
     steps:
       - checkout
       - node/install-packages:
-          pkg-manager: yarn
+          pkg-manager: pnpm
       - run:
-          command: yarn build
+          command: pnpm run build
           name: Build app
 workflows:
   build-and-test:
