--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "url": "https://github.com/SilverLinings89/VirusSimulator",
     "type": "git"
   },
-  "packageManager": "pnpm",
+  "packageManager": "pnpm@9.12.3",
   "version": "1.1.0",
   "scripts": {
     "ng": "ng",
