--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       # Build the Angular app
       - name: Build Angular app
-        run: pnpm run build
+        run: pnpm run ghbuild
 
       # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
